fix: TOC text color in dark mode (#89)
* feat: Add rounded corners and center alignment for images in markdown

* fix: toc display effect in dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,17 +4,22 @@
 
 /* cantarell-latin-400-normal */
 @font-face {
-  font-family: 'Cantarell';
+  font-family: "Cantarell";
   font-style: normal;
   font-display: auto;
   font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/cantarell@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/cantarell@latest/latin-400-normal.woff) format('woff');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/cantarell@latest/latin-400-normal.woff2)
+      format("woff2"),
+    url(https://cdn.jsdelivr.net/fontsource/fonts/cantarell@latest/latin-400-normal.woff)
+      format("woff");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
   @apply bg-background-light dark:bg-background-dark text-gray-800;
-  font-family: Cantarell,'Source Han Serif CN VF' !important;
+  font-family: Cantarell, "Source Han Serif CN VF" !important;
 }
 
 textarea:focus {
@@ -23,7 +28,7 @@ textarea:focus {
 
 .wmde-markdown {
   @apply bg-w;
-  font-family: Cantarell,'Source Han Serif CN VF' !important;
+  font-family: Cantarell, "Source Han Serif CN VF" !important;
 }
 
 .w-md-editor {
@@ -79,6 +84,10 @@ ul {
 
 .writeauto {
   @apply w-full md:w-7/12 lg:w-8/12 xl:w-10/12 2xl:w-full duration-300;
+}
+
+.wmde-markdown code {
+  @apply text-theme bg-secondary;
 }
 
 .markdown-alert {
